2008-06-28  Sebastien Pouliot  <sebastien@ximian.com>

	* ReplaceIncompleteOddnessCheckRule.cs: New. Rule that check
	for a common, yet incomplete, oddness check (that fails when 
	using negative numbers).
	* Gendarme.Rules.BadPractice.mdp: Update MD project file.
	* Makefile.am: Add rule/test to the build.

2008-06-08  Sebastien Pouliot  <sebastien@ximian.com>

	* CheckNewExceptionWithoutThrowingRule.cs: Rename 
	StackEntryAnalysis.UsageResult to StackEntryUsageResult
	* CheckNewThreadWithoutStartRule.cs: Rename 
	StackEntryAnalysis.UsageResult to StackEntryUsageResult

2008-05-18  Sebastien Pouliot  <sebastien@ximian.com>

	* ObsoleteMessagesShouldNotBeEmptyRule.cs: New. Check that 
	when [Obsolete] is used a description is provided.
	* Makefile.am: Add rule/test to the build.

2008-05-04  Sebastien Pouliot  <sebastien@ximian.com>

	* EqualShouldHandleNullArgRule.cs: Simplify method (self-test cc).
	Fix all known positives (3) that were still found in Mono BCL.

2008-04-25  Sebastien Pouliot  <sebastien@ximian.com>

	* CheckNewThreadWithoutStartRule.cs: Use Initialize to avoid 
	executing the rule on some assemblies (52 out of 72 for Mono 2.0)
	* GetEntryAssemblyMayReturnNullRule.cs: Use Initialize to avoid
	executing the rule on some assemblies (36 out of 72 for Mono 2.0)
	and when the assembly is an EXE.

2008-04-23  Sebastien Pouliot  <sebastien@ximian.com>

	* DisableDebuggingCodeRule.cs: Change Initialize so the rule 
	applies to corlib too (which defines, not refer to Console type).
	* CheckNewExceptionWithoutThrowingRule.cs: Use Inherits (instead
	of checking name suffix) to find Exception-devired types.

2008-03-07  Sebastien Pouliot  <sebastien@ximian.com>

	* DisableDebuggingCodeRule.cs: New. Rule to check for debugging
	CWL left inside assemblies (ref: bug #366450)
	* Gendarme.Rules.BadPractice.mdp: Update MD project file.
	* Makefile.am: Add rule/test to the build.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com>
