@@ -14,7 +14,8 @@ badpractice_rules_sources = CloneMethodShouldNotReturnNullRule.cs EqualShouldHan
 	ToStringReturnsNullRule.cs GetEntryAssemblyMayReturnNullRule.cs ConstructorShouldNotCallVirtualMethodsRule.cs \
 	CheckNewExceptionWithoutThrowingRule.cs CheckNewThreadWithoutStartRule.cs DisableDebuggingCodeRule.cs \
 	ObsoleteMessagesShouldNotBeEmptyRule.cs \
-	ReplaceIncompleteOddnessCheckRule.cs
+	ReplaceIncompleteOddnessCheckRule.cs \
+	AvoidVisibleConstantFieldRule.cs
 
 badpractice_rules_build_sources = $(addprefix $(srcdir)/, $(badpractice_rules_sources))
 badpractice_rules_build_sources += $(badpractice_rules_generated_sources)
@@ -27,7 +28,8 @@ badpractice_test_sources = CloneMethodShouldNotReturnNullTest.cs EqualShouldHand
 	ToStringReturnsNullTest.cs GetEntryAssemblyMayReturnNullTest.cs ConstructorShouldNotCallVirtualMethodsTest.cs \
 	CheckNewExceptionWithoutThrowingTest.cs CheckNewThreadWithoutStartTest.cs DisableDebuggingCodeTest.cs \
 	ObsoleteMessagesShouldNotBeEmptyTest.cs \
-	ReplaceIncompleteOddnessCheckTest.cs
+	ReplaceIncompleteOddnessCheckTest.cs \
+	AvoidVisibleConstantFieldTest.cs
 
 badpractice_test_build_sources = $(addprefix $(srcdir)/Test/, $(badpractice_test_sources))
 
